[gd_scene load_steps=34 format=2]

[ext_resource path="res://objects/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/walls.png" type="Texture" id=2]
[ext_resource path="res://WorldGenerator.gd" type="Script" id=3]
[ext_resource path="res://objects/Exit.tscn" type="PackedScene" id=4]
[ext_resource path="res://Game.gd" type="Script" id=5]
[ext_resource path="res://sprites/portraits/gamedev.png" type="Texture" id=6]
[ext_resource path="res://ui/basetheme.tres" type="StyleBox" id=7]
[ext_resource path="res://ui/font.tres" type="DynamicFont" id=8]
[ext_resource path="res://ui/steps.png" type="Texture" id=9]
[ext_resource path="res://ui/etcsteps.png" type="Texture" id=10]
[ext_resource path="res://audio/death_sounds/2yell5.wav" type="AudioStream" id=11]
[ext_resource path="res://audio/footsteps/footstep05.wav" type="AudioStream" id=12]
[ext_resource path="res://audio/footsteps/footstep04.wav" type="AudioStream" id=13]
[ext_resource path="res://audio/footsteps/footstep06.wav" type="AudioStream" id=14]
[ext_resource path="res://audio/death_sounds/2yell4.wav" type="AudioStream" id=15]
[ext_resource path="res://audio/death_sounds/impactsplat01.mp3.wav" type="AudioStream" id=16]
[ext_resource path="res://audio/part.wav" type="AudioStream" id=17]
[ext_resource path="res://audio/wall.wav" type="AudioStream" id=18]
[ext_resource path="res://audio/unlink.wav" type="AudioStream" id=19]
[ext_resource path="res://audio/ind_wall.wav" type="AudioStream" id=20]
[ext_resource path="res://audio/treasures/Meow.wav" type="AudioStream" id=21]
[ext_resource path="res://audio/treasures/buzz.wav" type="AudioStream" id=22]
[ext_resource path="res://audio/treasures/bug_03.wav" type="AudioStream" id=23]
[ext_resource path="res://audio/treasures/bark.wav" type="AudioStream" id=24]
[ext_resource path="res://audio/treasures/a.wav" type="AudioStream" id=25]
[ext_resource path="res://audio/stairs.wav" type="AudioStream" id=26]
[ext_resource path="res://audio/LockedDoor_2.wav" type="AudioStream" id=27]
[ext_resource path="res://audio/music/underground.ogg" type="AudioStream" id=28]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 16, 16, 0, 16, 0, 0, 16, 0 )

[sub_resource type="TileSet" id=5]
0/name = "walls.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 16, 16 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "walls.png 1"
1/texture = ExtResource( 2 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 16, 0, 16, 16 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "walls.png 2"
2/texture = ExtResource( 2 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 16, 16, 16 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "walls.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 16, 16, 16, 16 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 5 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 3, 0, 8, 0, 0, 9, 0, 0, 10, 0, 0, 11, 0, 0, 12, 0, 0, 13, 0, 0, 14, 0, 0, 15, 0, 0, 65536, 0, 0, 65543, 0, 0, 65544, 0, 0, 65551, 0, 0, 131072, 0, 0, 131076, 0, 0, 131077, 0, 0, 131079, 0, 0, 131080, -1610612734, 0, 131085, 0, 0, 131087, 0, 0, 196608, 0, 0, 196612, 0, 0, 262144, 2, 0, 262154, 0, 0, 327680, 1610612738, 0, 327687, 0, 0, 327688, 0, 0, 327690, 0, 0, 327691, 0, 0, 327695, 0, 0, 393216, 2, 0, 393223, 0, 0, 393224, 0, 0, 393231, 0, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458762, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, -1610612734, 0, 524288, 3, 0, 524289, 0, 0, 524290, 0, 0, 524293, 0, 0, 524294, 3, 0, 524295, 0, 0, 524296, 3, 0, 524297, 0, 0, 524298, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 589824, 0, 0, 589831, 0, 0, 589832, 0, 0, 589839, 0, 0, 655360, 0, 0, 655367, 0, 0, 655368, 0, 0, 655375, 0, 0, 720896, 0, 0, 720911, 0, 0, 786432, 0, 0, 786447, 0, 0, 851968, 0, 0, 851975, 0, 0, 851976, 0, 0, 851983, 0, 0, 917504, 0, 0, 917511, 0, 0, 917512, 0, 0, 917519, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 1610612739, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 3, 0 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Exit" parent="." instance=ExtResource( 4 )]

[node name="WorldGenerator" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="KilledRestartMessage" type="Label" parent="CanvasLayer"]
visible = false
self_modulate = Color( 0.431373, 0.341176, 0.45098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -120.5
margin_top = -156.0
margin_right = 120.5
margin_bottom = -113.0
custom_fonts/font = ExtResource( 8 )
text = "You Died! 
Press R to Restart"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/KilledRestartMessage"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -48.0
margin_right = 15.0
margin_bottom = 53.0
custom_styles/panel = ExtResource( 7 )

[node name="CollectionInfo" type="Label" parent="CanvasLayer"]
self_modulate = Color( 0.431373, 0.341176, 0.45098, 1 )
margin_left = 32.0
margin_top = 176.0
margin_right = 108.0
margin_bottom = 241.0
custom_fonts/font = ExtResource( 8 )
text = "Nivel: 1
Llaves: 0/3
Objeto: 
Tesoros: 0/5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/CollectionInfo"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -16.0
margin_right = 18.0
margin_bottom = 15.0
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StepsItems" type="Panel" parent="CanvasLayer"]
show_behind_parent = true
margin_left = 16.0
margin_top = 8.0
margin_right = 336.0
margin_bottom = 152.0
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/StepsItems"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.0
margin_top = -20.5
margin_right = -120.0
margin_bottom = -4.5
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="CanvasLayer/StepsItems"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -20.5
margin_right = -64.0
margin_bottom = -4.5
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="CanvasLayer/StepsItems"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.0
margin_top = -20.5
margin_right = -8.0
margin_bottom = -4.5
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="CanvasLayer/StepsItems"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = -20.5
margin_right = 48.0
margin_bottom = -4.5
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="CanvasLayer/StepsItems"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 87.9999
margin_top = -20.5
margin_right = 104.0
margin_bottom = -4.5
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect6" type="TextureRect" parent="CanvasLayer/StepsItems"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 87.9999
margin_top = -20.5
margin_right = 104.0
margin_bottom = -4.5
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Steps" type="Label" parent="CanvasLayer"]
self_modulate = Color( 0.431373, 0.341176, 0.45098, 1 )
margin_left = 32.0
margin_top = 24.0
margin_right = 320.0
margin_bottom = 72.0
custom_fonts/font = ExtResource( 8 )
text = "Movimientos:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TreasureDisplay" type="Panel" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -276.0
margin_top = 16.0
margin_right = 304.0
margin_bottom = 373.0
custom_styles/panel = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="CanvasLayer/TreasureDisplay"]
modulate = Color( 0.431373, 0.341176, 0.45098, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -268.5
margin_top = 16.0
margin_right = 268.5
margin_bottom = 87.0
custom_fonts/font = ExtResource( 8 )
text = "Encontraste:
Al Initzer come-virus"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="CanvasLayer/TreasureDisplay"]
modulate = Color( 0.431373, 0.341176, 0.45098, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
rect_scale = Vector2( 4, 4 )
rect_pivot_offset = Vector2( 16, 16 )
texture = ExtResource( 6 )

[node name="Message" type="Label" parent="CanvasLayer/TreasureDisplay"]
modulate = Color( 0.431373, 0.341176, 0.45098, 1 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -260.0
margin_top = -117.0
margin_right = 260.0
margin_bottom = -9.0
custom_fonts/font = ExtResource( 8 )
text = "\"Eres un máquina\" - Initzer 2020"
align = 1
valign = 1
autowrap = true

[node name="PotionPickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
bus = "SFX"

[node name="PotionDrinkSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
bus = "SFX"

[node name="KeyPickupSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )
bus = "SFX"

[node name="DoorUnlockSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 27 )
bus = "SFX"

[node name="StartLevelSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 26 )
bus = "SFX"

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -5.049
bus = "SFX"

[node name="SkipTurnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )
volume_db = -7.068
bus = "SFX"

[node name="FootStepSounds" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FootStepSounds"]
stream = ExtResource( 13 )
volume_db = -8.078
mix_target = 2
bus = "SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="FootStepSounds"]
stream = ExtResource( 12 )
volume_db = -8.078
mix_target = 2
bus = "SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="FootStepSounds"]
stream = ExtResource( 14 )
volume_db = -8.078
mix_target = 2
bus = "SFX"

[node name="DeathSounds" type="Node" parent="."]

[node name="DeathSound" type="AudioStreamPlayer" parent="DeathSounds"]
stream = ExtResource( 15 )
bus = "SFX"

[node name="DeathSound2" type="AudioStreamPlayer" parent="DeathSounds"]
stream = ExtResource( 11 )
bus = "SFX"

[node name="TreasureSounds" type="Node" parent="."]

[node name="Cat" type="AudioStreamPlayer" parent="TreasureSounds"]
stream = ExtResource( 21 )
bus = "SFX"

[node name="Mantis" type="AudioStreamPlayer" parent="TreasureSounds"]
stream = ExtResource( 23 )
bus = "SFX"

[node name="Dog" type="AudioStreamPlayer" parent="TreasureSounds"]
stream = ExtResource( 24 )
bus = "SFX"

[node name="Bee" type="AudioStreamPlayer" parent="TreasureSounds"]
stream = ExtResource( 22 )
bus = "SFX"

[node name="Person" type="AudioStreamPlayer" parent="TreasureSounds"]
stream = ExtResource( 25 )
bus = "SFX"

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 28 )
autoplay = true
